--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Algebra Git</title>
 </head>
 <body>
-  
-
-    <script type="module" src="script.js"></script>
+  <header>
+    <h1>Algebra Git</h1>
+  </header>
 </body>
 </html>
