--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
   <title>Algebra Git</title>
 </head>
 <body>
-  <header>
-    <h1>Algebra Git</h1>
-  </header>
-  <main>
-    
-  </main>
-  <footer></footer>
+  <div>
+    <header>
+      <h1>Algebra Git</h1>
+    </header>
+  </div>
 </body>
 </html>
